# kickass-app-template

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: command_line.rs  features.rs  main.rs
src/command_line/: command_line.rs  mod.rs  utils.rs
src/config/: config.rs  config_impls.rs  config_model.rs  config_ops.rs  mod.rs
src/frontend/: mod.rs
src/frontend/console/: mod.rs
src/frontend/egui/: Infinity Ball.json  Psychedelic 3D.json  egui.rs  fractal_clock.rs  lottie_anim.rs  mod.rs
src/frontend/egui/lottie_anim_facade/: 3D world illusion.json  Coder with coffee mug.json  Hypnotic.json  Rectangles and Circles.json  mod.rs  native_lottie_anim.rs  types.rs  web_lottie_anim.rs
src/frontend/socket_server/: executor.rs  futures_processor.rs  mod.rs  parallel_processor.rs  protocol.rs  serial_processor.rs  socket_server.rs  types.rs
src/frontend/telegram/: mod.rs  telegram.rs
src/frontend/terminal/: mod.rs
src/frontend/terminal/demo/: crossterm.rs  mod.rs  termion.rs  ui.rs
src/frontend/web/: api.rs  backend.rs  embedded_files.rs  files.rs  mod.rs  planetpedia_api.rs
src/logic/: logic.rs  mod.rs
src/runtime/: mod.rs  runtime.rs
tests/: big-o-tests.rs
web-app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxyconfig.json  server.ts
web-app/src/: index.html
web-app/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
web-app/src/app/explorer-form/: explorer-form.component.css  explorer-form.component.html  explorer-form.component.spec.ts  explorer-form.component.ts  form.ts
web-app/src/app/get-service-explorer-page/: get-service-explorer-page.component.html  get-service-explorer-page.component.spec.ts  get-service-explorer-page.component.ts
web-app/src/app/home-page/: home-page.component.html  home-page.component.spec.ts  home-page.component.ts
web-app/src/app/navbar/: navbar.component.css  navbar.component.html
web-app/src/app/post-service-explorer-page/: post-service-explorer-page.component.html  post-service-explorer-page.component.spec.ts  post-service-explorer-page.component.ts
web-app/src/app/rest-service-explorer-page/: rest-service-explorer-page.component.html  rest-service-explorer-page.component.spec.ts  rest-service-explorer-page.component.ts
web-app/src/environments/: environment.prod.ts  environment.ts
web-egui/: Cargo.toml  index.html
web-egui/assets/: sw.js
web-egui/src/: main.rs
